--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ body {
 }
 .left-header {
   display: flex;
-  width: 50%;
+  width: 45%;
   align-items: center;
   justify-content: center;
   border-right: 2px solid hsl(200, 100%, 15%);
-  padding: 0.5rem;
-  margin: 0.5rem;
+  padding: 5px;
+  margin:5px;
 }
 
 .weather-icon {
@@ -31,19 +31,19 @@ body {
   object-fit: contain;
 }
 .weather-icon.large {
-  width: 80px;
-  height: 80px;
+  width: 40px;
+  height: 40px;
 }
 .header-curent-temp {
   margin-left: 15px;
-  font-size: 2rem;
+  font-size: 18px;
 }
 .right-herader {
   display: grid;
-  width: 50%;
+  width: 55%;
   justify-content: space-around;
   align-items: center;
-  gap: 0.5rem;
+  gap: 5px;
   grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(2, auto);
 }
@@ -54,12 +54,13 @@ body {
 }
 
 .label{
+  font-size: 14px;
    text-transform: uppercase;
    font-weight: bold;
    color: hsl(200, 100%, 65%);
 }
 .value-sub-info{
-    font-size: 0.8rem;
+    font-size: 14px;
 
 }
 .blurred{
@@ -69,9 +70,9 @@ body {
 .day-section{
     display: grid;
     grid-template-columns: repeat(auto-fit, 90px);
-    gap: 0.7rem;
+    gap: 10px;
     justify-content: center;
-    padding: 1rem;
+    padding: 10px;
 }
 .day-card{
     border: 1px solid hsl(200, 100%, 15%);
@@ -79,7 +80,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    padding: 10px;
     border-radius: 20px;
 }
 .day-card img{
